--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -46,17 +46,17 @@
 }
 
 @article{Abby27032012,
-author = {Abby, Sophie S. and Tannier, Eric and Gouy, Manolo and Daubin, Vincent}, 
+author = {Abby, Sophie S. and Tannier, Eric and Gouy, Manolo and Daubin, Vincent},
 title = {Lateral gene transfer as a support for the tree of life},
-volume = {109}, 
-number = {13}, 
-pages = {4962-4967}, 
-year = {2012}, 
-doi = {10.1073/pnas.1116871109}, 
-abstract ={Lateral gene transfer (LGT), the acquisition of genes from other species, is a major evolutionary force. However, its success as an adaptive process makes the reconstruction of the history of life an intricate puzzle: If no gene has remained unaffected during the course of life's evolution, how can one rely on molecular markers to reconstruct the relationships among species? Here, we take a completely different look at LGT and its impact for the reconstruction of the history of life. Rather than trying to remove the effect of LGT in phylogenies, and ignoring as a result most of the information of gene histories, we use an explicit phylogenetic model of gene transfer to reconcile gene histories with the tree of species. We studied 16 bacterial and archaeal phyla, representing a dataset of 12,000 gene families distributed in 336 genomes. Our results show that, in most phyla, LGT provides an abundant phylogenetic signal on the pattern of species diversification and that this signal is robust to the choice of gene families under study. We also find that LGT brings an abundant signal on the location of the root of species trees, which has been previously overlooked. Our results quantify the great variety of gene transfer rates among lineages of the tree of life and provide strong support for the `complexity hypothesis,' which states that genes whose products participate to macromolecular protein complexes are relatively resistant to transfer.}, 
-URL = {http://www.pnas.org/content/109/13/4962.abstract}, 
-eprint = {http://www.pnas.org/content/109/13/4962.full.pdf}, 
-journal = {Proceedings of the National Academy of Sciences} 
+volume = {109},
+number = {13},
+pages = {4962-4967},
+year = {2012},
+doi = {10.1073/pnas.1116871109},
+abstract ={Lateral gene transfer (LGT), the acquisition of genes from other species, is a major evolutionary force. However, its success as an adaptive process makes the reconstruction of the history of life an intricate puzzle: If no gene has remained unaffected during the course of life's evolution, how can one rely on molecular markers to reconstruct the relationships among species? Here, we take a completely different look at LGT and its impact for the reconstruction of the history of life. Rather than trying to remove the effect of LGT in phylogenies, and ignoring as a result most of the information of gene histories, we use an explicit phylogenetic model of gene transfer to reconcile gene histories with the tree of species. We studied 16 bacterial and archaeal phyla, representing a dataset of 12,000 gene families distributed in 336 genomes. Our results show that, in most phyla, LGT provides an abundant phylogenetic signal on the pattern of species diversification and that this signal is robust to the choice of gene families under study. We also find that LGT brings an abundant signal on the location of the root of species trees, which has been previously overlooked. Our results quantify the great variety of gene transfer rates among lineages of the tree of life and provide strong support for the `complexity hypothesis,' which states that genes whose products participate to macromolecular protein complexes are relatively resistant to transfer.},
+URL = {http://www.pnas.org/content/109/13/4962.abstract},
+eprint = {http://www.pnas.org/content/109/13/4962.full.pdf},
+journal = {Proceedings of the National Academy of Sciences}
 }
 
 @Article{Agresti2001,
@@ -3141,7 +3141,7 @@ Uses also the diagnosis of the golden runs.},
   Timestamp                = {2009.01.20}
 }
 
-@Article(Goldberg2008,
+@Article{Goldberg2008,
   Title   = {On Phylogenetic Tests of Irreversible Evolution},
   Author  = {Goldberg, Emma E. and Igi{\'c}, Boris},
   Journal = EVOLUTION,
@@ -5500,6 +5500,22 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2013.04.17}
 }
 
+@Article{Liu2010,
+author="Liu, Liang and Yu, Lili and Pearl, Dennis K.",
+title="Maximum tree: a consistent estimator of the species tree",
+journal="Journal of Mathematical Biology",
+year="2010",
+month="Jan",
+day="01",
+volume="60",
+number="1",
+pages="95--106",
+issn="1432-1416",
+doi="10.1007/s00285-009-0260-0",
+url="https://doi.org/10.1007/s00285-009-0260-0"
+}
+
+
 @Article{loreille2001,
   Title                    = {Ancient {DNA} analysis reveals divergence of the cave bear, \textit{{U}rsus spelaeus}, and brown bear, \textit{{U}rsus arctos}, lineages},
   Author                   = {Loreille, Odile and Orlando, Ludovic and Patou-Mathis, Maryl{\`e}ne and Philippe, Michel and Taberlet, Pierre and H{\"a}nni, Catherine},
@@ -7500,7 +7516,6 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Number                   = {4},
   Pages                    = {1645--1656},
   Volume                   = {164},
-
   Owner                    = {hoehna},
   Publisher                = {Genetics Soc America},
   Timestamp                = {2013.06.11}
