--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -98,8 +98,8 @@ P_{JC69} = \begin{pmatrix} {{1\over4} + {3\over4}e^{-rt}} & {{1\over4} - {1\over
 \end{equation*}
 where $t$ is the branch length in units of time, and $r$ is the rate (clock) for the process.
 In the later exercises you will be asked to specify more complex substitution models.
-\textbf{Don't be scared by the math!}
-\RevBayes will take care of all the computations for you.
+\textbf{Don't worry, you won't have to calculate all of the transition probabilities, because
+\RevBayes will take care of all the computations for you.} 
 Here we only provide some of the equations for the models in case you might be interested in the details.
 You will be able to complete the exercises without understanding the underlying math.
 
