updates to tutorials

--- a/tutorial_TeX/RB_MyFirstMCMC_Tutorial/RB_MyFirstMCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MyFirstMCMC_Tutorial/RB_MyFirstMCMC_Tutorial_content.tex
@@ -71,7 +71,7 @@ On your own computer or your remote machine, create a directory called {\textcol
 
 \end{framed}}
 
-In this tutorial we will be simulating our own data using RevBayes. Explain how to simulate data in Rev. 
+In this tutorial we will be simulating our own data using \RevBayes. Explain how to simulate data in Rev. 
 
 
 \bigskip
