--- a/tutorial_TeX/RB_MyFirstMCMC_Tutorial/RB_MyFirstMCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MyFirstMCMC_Tutorial/RB_MyFirstMCMC_Tutorial_content.tex
@@ -137,7 +137,7 @@ v <- 1 / rgamma(1, a, b)[1]
 \end{lstlisting}
 \end{snugshade*}}
 
-Set number of iterations of our MCMC and setup writing our ouput:
+Set number of iterations of our MCMC and setup writing our output:
 
 {\tt \begin{snugshade*}
  \begin{lstlisting}
